
(rule
 (targets transport_audio.ml transport_backend.ml transport_render.ml transport_common.ml)
 (deps
  (:protos proto/transport_audio.proto proto/transport_common.proto proto/transport_backend.proto proto/transport_render.proto)
  )
 (action
  (run protoc -I proto --ocaml_out=. %{protos})))

(library
 (name ml_regl)
 (modules
  color
  regl_common
  regl_program
  regl_builtin_programs
  regl_effects
  regl_compositors
  transport_audio
  transport_backend
  transport_render
  transport_common
  regl_transport
  regl_audio
  regl)
 (libraries js_of_ocaml ocaml-protoc-plugin)
 (public_name regl)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A)))
