(rule
 (targets
  transport_audio.ml
  transport_backend.ml
  transport_render.ml
  transport_common.ml)
 (deps
  (:protos
   proto/transport_audio.proto
   proto/transport_common.proto
   proto/transport_backend.proto
   proto/transport_render.proto))
 (action
  (run protoc -I proto --ocaml_out=. %{protos})))

; Portable core: protobuf wire format + smart constructors. NO js_of_ocaml,
; so this library can be linked into native consumers (e.g. declgl-desktop).
;
; (wrapped false) so the existing test files (and the [Regl] facade)
; can keep referring to [Regl_audio], [Regl_common], [Regl_proto], [Color],
; etc. as bare top-level module names, exactly like before the split.

(library
 (name ml_regl_core)
 (public_name ml_regl_core)
 ;  (wrapped false)
 (modules
  color
  regl_common
  regl_program
  regl_builtin_programs
  regl_effects
  regl_compositors
  transport_audio
  transport_backend
  transport_render
  transport_common
  regl_audio
  regl_proto
  regl_runtime)
 (libraries ocaml-protoc-plugin)
 (flags
  (:standard -warn-error -A)))
