; Cross-backend tests.
;
; Each .ml below contains pure platform-agnostic code that ends with
; [Regl_backend.create_app init update view]. We declare two executable
; stanzas per source: one js variant linking the JS backend, one native
; variant linking the desktop backend. The user picks at build time:
;
;     # Browser bundle (writes test/test_ml_regl.bc.js):
;     dune build test/test_ml_regl.bc.js
;
;     # Native binary (writes test/test_ml_regl_desktop.exe):
;     DECLGL_BUILD_DIR=$PWD/declgl-desktop/build/mac-debug \
;       dune build test/test_ml_regl_desktop.exe
;
; The desktop variants depend on the foreign-archive build via the
; DECLGL_BUILD_DIR env var (see lib/backend/desktop/dune). Without it
; set, dune will refuse to build the desktop variants but still build
; the js variants cleanly.

; --- test_ml_regl: full-coverage demo of the public API ----------------

(executable
 (name test_ml_regl)
 (modules test_ml_regl)
 (libraries js_of_ocaml ml_regl_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A))
 (js_of_ocaml
  (flags
   (:standard --opt=3))))

(executable
 (name test_ml_regl_desktop)
 (modules test_ml_regl_desktop)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_ml_regl_desktop.ml)
 (deps test_ml_regl.ml)
 (action
  (copy %{deps} %{target})))

; --- test_stress_ml_regl: stress-test variant --------------------------

(executable
 (name test_stress_ml_regl)
 (modules test_stress_ml_regl)
 (libraries js_of_ocaml ml_regl_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A))
 (js_of_ocaml
  (flags
   (:standard --opt=3))))

(executable
 (name test_stress_ml_regl_desktop)
 (modules test_stress_ml_regl_desktop)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_stress_ml_regl_desktop.ml)
 (deps test_stress_ml_regl.ml)
 (action
  (copy %{deps} %{target})))

; --- test_failures_ml_regl: error-path coverage ------------------------

(executable
 (name test_failures_ml_regl)
 (modules test_failures_ml_regl)
 (libraries js_of_ocaml ml_regl_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A))
 (js_of_ocaml
  (flags
   (:standard --opt=3))))

(executable
 (name test_failures_ml_regl_desktop)
 (modules test_failures_ml_regl_desktop)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_failures_ml_regl_desktop.ml)
 (deps test_failures_ml_regl.ml)
 (action
  (copy %{deps} %{target})))

; --- test_smoke: minimal primitive/resource smoke test -----------------
; Cross-backend: draws core 2D primitives and exercises load/unload/reload.

(executable
 (name test_smoke)
 (modules test_smoke)
 (libraries js_of_ocaml ml_regl_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A))
 (js_of_ocaml
  (flags
   (:standard --opt=3))))

(executable
 (name test_smoke_desktop)
 (modules test_smoke_desktop)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_smoke_desktop.ml)
 (deps test_smoke.ml)
 (action
  (copy %{deps} %{target})))

; --- test_audio_smoke: audio E2E ----------------------------------------
; Cross-backend: drives WAV + OGG through the selected backend and exercises
; start/stop/volume/playback_rate/unload.

(executable
 (name test_audio_smoke)
 (modules test_audio_smoke)
 (libraries js_of_ocaml ml_regl_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A))
 (js_of_ocaml
  (flags
   (:standard --opt=3))))

(executable
 (name test_audio_smoke_desktop)
 (modules test_audio_smoke_desktop)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_audio_smoke_desktop.ml)
 (deps test_audio_smoke.ml)
 (action
  (copy %{deps} %{target})))

; --- test_desktop_window_smoke: window-config E2E ----------------------
; Desktop-only: exercises both StartRegl.window (initial flags) and
; ConfigRegl/ConfigWindow (runtime overrides), then ships quit_regl.

(executable
 (name test_desktop_window_smoke)
 (modules test_desktop_window_smoke)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

; --- test_storage_file_smoke: backend KV/file I/O E2E ------------------
; Cross-backend: exercises SaveValue / ReadValue / LoadFile, including missing
; key/file paths. JS maps storage to localStorage + LoadFile to fetch; desktop
; maps storage/file I/O through AssetLoader.

(executable
 (name test_storage_file_smoke)
 (modules test_storage_file_smoke)
 (libraries js_of_ocaml ml_regl_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A))
 (js_of_ocaml
  (flags
   (:standard --opt=3))))

(executable
 (name test_storage_file_smoke_desktop)
 (modules test_storage_file_smoke_desktop)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_storage_file_smoke_desktop.ml)
 (deps test_storage_file_smoke.ml)
 (action
  (copy %{deps} %{target})))

; --- test_fps_smoke: runtime frame-rate change E2E ---------------------
; Cross-backend: ships ConfigRegl/ConfigTimeInterval mid-run and visualises the
; achieved fps so host-native pacing vs manual pacing is observable.

(executable
 (name test_fps_smoke)
 (modules test_fps_smoke)
 (libraries js_of_ocaml ml_regl_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A))
 (js_of_ocaml
  (flags
   (:standard --opt=3))))

(executable
 (name test_fps_smoke_desktop)
 (modules test_fps_smoke_desktop)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_fps_smoke_desktop.ml)
 (deps test_fps_smoke.ml)
 (action
  (copy %{deps} %{target})))

; --- test_mouse_smoke: mouse event coordinate E2E ----------------------
; Cross-backend: displays MouseMove/MouseDown/MouseUp as received by OCaml and
; asserts they stay within the StartRegl virtual canvas. The test is interactive
; but auto-quits after 20 seconds on desktop.

(executable
 (name test_mouse_smoke)
 (modules test_mouse_smoke)
 (libraries js_of_ocaml ml_regl_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A))
 (js_of_ocaml
  (flags
   (:standard --opt=3))))

(executable
 (name test_mouse_smoke_desktop)
 (modules test_mouse_smoke_desktop)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_mouse_smoke_desktop.ml)
 (deps test_mouse_smoke.ml)
 (action
  (copy %{deps} %{target})))

; --- test_textbox_smoke: textbox layout/style E2E ----------------------
; Cross-backend: exercises multiline, word wrap, wordBreak, italic skew,
; MSDF thickness/boldness, and text alignment options.

(executable
 (name test_textbox_smoke)
 (modules test_textbox_smoke)
 (libraries js_of_ocaml ml_regl_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A))
 (js_of_ocaml
  (flags
   (:standard --opt=3))))

(executable
 (name test_textbox_smoke_desktop)
 (modules test_textbox_smoke_desktop)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_textbox_smoke_desktop.ml)
 (deps test_textbox_smoke.ml)
 (action
  (copy %{deps} %{target})))

; --- test_fbo_grow: cross-backend dynamic FBO pool growth --------------
; Seeds the pool with [fbo_num = 1] and renders a tree that needs many
; concurrent palettes per frame. Both backends (JS allocNewFBO; desktop
; FboPool::acquire grow path) must dynamically grow the pool or the
; visible output will be missing sub-trees.

(executable
 (name test_fbo_grow)
 (modules test_fbo_grow)
 (libraries js_of_ocaml ml_regl_js)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A))
 (js_of_ocaml
  (flags
   (:standard --opt=3))))

(executable
 (name test_fbo_grow_desktop)
 (modules test_fbo_grow_desktop)
 (libraries ml_regl_desktop)
 (modes
  (native exe))
 (flags
  (:standard -warn-error -A)))

(rule
 (target test_fbo_grow_desktop.ml)
 (deps test_fbo_grow.ml)
 (action
  (copy %{deps} %{target})))
