; Browser facade: re-exports ml_regl_core and adds the [Js.export "MlApp"]
; bridge plus DOM-typed [regl_input]. Existing test files keep depending on
; this library and the [Regl] module unchanged.

(library
 (name ml_regl_js)
 (public_name regl_js)
 (modules regl_js)
 (libraries js_of_ocaml ml_regl_core)
 (preprocess
  (pps js_of_ocaml-ppx))
 (flags
  (:standard -warn-error -A)))
